# Qt_modules_9.2.1

./: CMakeLists.txt  main.cpp
